<package>
  <name>rosarnl</name>
  <version>0.0.2</version>
  <description>
    Provides a ROS interface for Adept MobileRobots ARNL navigation softare.
  </description>
  <maintainer email="reed.hedges@aedpt.com">Reed Hedges</maintainer>
  <author>Adept MobileRobots</author>
  <license> 
Copyright (c) 2014 Adept Technology Inc.
All rights reserved. 
See LICENSE.txt for rosarnl license terms.
See /usr/local/Arnl/LICENSE.txt for ARNL library license terms.
   </license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>

  </export>
</package>
